--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -3,6 +3,8 @@
 *, ::before, ::after {
   box-sizing: border-box;
   background-repeat: no-repeat;
+  margin: 0;
+  padding: 0;
 }
 
 // Cursors only change to hint non-obvious interfaces
