--- a/sass/utils/_index.scss
+++ b/sass/utils/_index.scss
@@ -1,5 +1,5 @@
 @forward 'functions';
 @forward 'mixins';
 @forward 'variables';
-@forward 'helpers';
+@forward 'helper-classes';
 @forward 'breakpoints';
