--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,11 +1,17 @@
 :root {
-  // LIGHT THEME
   --clr-bg: hsl(227, 100%, 98%);
   --clr-headers: hsl(220, 18%, 16%);
   --clr-primary: hsl(217, 35%, 45%);
   --clr-secondary: hsl(217, 20%, 51%);
   --clr-accent: hsl(212, 100%, 50%);
   --clr-white: hsl(0, 0%, 100%);
+  --clr-card-bg: hsl(0, 0%, 100%);
+}
 
-  // DARK THEME
+[data-theme="dark"] {
+  --clr-bg: hsl(220, 40%, 13%);
+  --clr-headers: hsl(0, 0%, 100%);
+  --clr-accent: hsl(212, 100%, 50%);
+  --clr-white: hsl(0, 0%, 100%);
+  --clr-card-bg: hsl(222, 41%, 20%);
 }
