--- a/sass/utils/_helper-classes.scss
+++ b/sass/utils/_helper-classes.scss
@@ -1,14 +1,18 @@
-@use './functions' as f;
+@use "./functions" as f;
 
 .container {
   max-width: f.rem(730);
   margin-inline: auto;
 }
 
-.container--white { background-color: var(--clr-white); }
+.br-15 {
+  border-radius: f.rem(15);
+}
 
-.br-15 { border-radius: f.rem(15); }
+.br-10 {
+  border-radius: f.rem(10);
+}
 
-.br-10 { border-radius: f.rem(10); }
-
-.not--available { opacity: 0.5; }
+.not--available {
+  opacity: 0.5;
+}
