--- a/sass/components/_search-bar.scss
+++ b/sass/components/_search-bar.scss
@@ -1,10 +1,11 @@
-@use '../utils/functions' as f;
+@use "../utils/functions" as f;
 
 .search {
+  background-color: var(--clr-card-bg);
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  padding: f.rem(7) 0 f.rem(7) f.rem(16) ;
+  padding: f.rem(7) 0 f.rem(7) f.rem(16);
   box-shadow: 0px 16px 30px -10px rgba(70, 96, 187, 0.198567);
 
   &__icon {
@@ -17,7 +18,7 @@
     border: none;
 
     &::placeholder {
-      font-family: 'Space Mono', monospace;
+      font-family: "Space Mono", monospace;
       font-size: f.rem(12);
       color: var(--clr-primary);
     }
