--- a/sass/components/_theme-toggle.scss
+++ b/sass/components/_theme-toggle.scss
@@ -1,17 +1,19 @@
-@use '../utils/functions' as f;
+@use "../utils/functions" as f;
 
 .theme {
-
   &__toggle {
     display: flex;
     align-items: flex-start;
     gap: f.rem(16);
 
-    &--dark {
+    &--dark,
+    &--light {
       text-transform: uppercase;
       letter-spacing: f.rem(2.5);
 
-      &:hover { cursor: pointer; }
+      &:hover {
+        cursor: pointer;
+      }
     }
   }
 }
