add theme switch functionality

--- a/sass/utils/_helper-classes.scss
+++ b/sass/utils/_helper-classes.scss
@@ -20,3 +20,8 @@
 .hidden {
   display: none;
 }
+
+.icon-light {
+  -webkit-filter: hue-rotate(40deg) saturate(0.5) brightness(390%) saturate(4);
+  filter: hue-rotate(40deg) saturate(0.5) brightness(390%) saturate(4);
+}
