--- a/sass/utils/_helper-classes.scss
+++ b/sass/utils/_helper-classes.scss
@@ -21,7 +21,7 @@
   display: none;
 }
 
-.icon-light {
+.icon--light {
   -webkit-filter: hue-rotate(40deg) saturate(0.5) brightness(390%) saturate(4);
   filter: hue-rotate(40deg) saturate(0.5) brightness(390%) saturate(4);
 }
