--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -4,6 +4,7 @@
   --clr-primary: hsl(217, 35%, 45%);
   --clr-secondary: hsl(217, 20%, 51%);
   --clr-accent: hsl(212, 100%, 50%);
+  --accent-hover: hsl(212, 100%, 69%);
   --clr-white: hsl(0, 0%, 100%);
   --clr-card-bg: hsl(0, 0%, 100%);
 }
